Repository Cleanup: Professional Structure
Organized repository for academic and professional presentation:

ADDED:
- STRUCTURE.md - Complete project organization documentation
- docker-compose/ai-services.yml - AI/ML services orchestration
- ml_training/Dockerfile - ML inference container
- .internal/ directory structure (gitignored)

MOVED TO .internal/:
- Research papers and diagrams
- Agent execution scripts
- Deployment reports
- Development artifacts

REORGANIZED:
- test_security_audit.py → tests/
- Updated .gitignore (exclude .internal/, .env, *.pyc)

ROOT DIRECTORY NOW CONTAINS ONLY:
- README.md (project overview)
- ROADMAP.md (development plan)
- STRUCTURE.md (organization guide)
- LICENSE (Apache 2.0)
- Core directories (config/, datasets/, docker-compose/, docs/, services/, ml_training/, models/, tests/)

This cleanup ensures professional presentation for academic review and public viewing.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,11 @@ credentials/
 secrets/
 config/secrets.yaml
 
+# Internal development files
+.internal/
+*.pyc
+__pycache__/
+
 # Datasets (large files)
 datasets/**/*.csv
 datasets/**/*.pcap
