Docs: Add shield-lock logo and favicon for AI-SOC branding

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,8 @@ theme:
   font:
     text: Inter
     code: SF Mono
+  logo: material/shield-lock
+  favicon: material/shield-lock
   features:
     - navigation.instant
     - navigation.tracking
